kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pomello-deployment
  labels:
    app: pomello
spec:
  selector:
    matchLabels:
      app: pomello
  replicas: 1
  template:
    metadata:
      labels:
        app: pomello
    spec:
      serviceAccountName: pomello-sa
      containers: 
        - name: pomello
          image: hongrichard/pomello
        - name: cloud-sql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.29.0 
          command:
            - "/cloud_sql_proxy"
            - "-instances=datadeque:us-east1:pomello-staging=tcp:5432"
          securityContext:
            runAsNonRoot: true
          resources:
            requests:
              memory: "2Gi"
              cpu:    "1"
      imagePullSecrets:
        - name: docker-registry-secret
