kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: pomello
spec:
  selector:
    app: pomello
  ports:
    - protocol: TCP
      port: 3001
  type: NodePort
