kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pomello
  annotations:
    kubernetes.io/ingress.global-static-ip-name: pomello-ip
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
  labels:
    app: pomello
spec:
  defaultBackend:
    service:
      name: pomello
      port:
        number: 3000
